Fixed search bar styling on mobile breakpoint

--- a/client/src/pages/FavouritesPage/FavouritesPage.scss
+++ b/client/src/pages/FavouritesPage/FavouritesPage.scss
@@ -5,32 +5,53 @@
 @use "../../styles/global.scss" as *;
 
 .faves-page {
-  padding: 1.25rem;
+  padding: 1.5rem;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin-left: 2.15rem;
-  margin-right: 2.15rem;
+
+  @include tablet {
+    padding: 2.15rem;
+  }
+
+  @include desktop {
+    padding: 1.25rem;
+    margin-left: 2.15rem;
+    margin-right: 2.15rem;
+  }
 
   @include large-desktop {
     margin-top: 1rem;
     margin-bottom: 19.9rem;
   }
+  
+  &__heart-icon {
+    box-shadow: $shadow-septenary;
+    padding: .25rem;
+    border: 4px solid $frosted-glass;
+    border-radius: 1.15rem;
+  }
 
   &__content {
-    border: 10px solid $frosted-glass;
+    border: 2px solid $frosted-glass;
     box-shadow: $shadow-septenary;
     border-radius: 1.15rem;
-    padding: 1rem;
+    padding: 1rem .5rem;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    @include tablet {
+      border: 10px solid $frosted-glass;
+      padding: 1rem;
+    }
   }
 
   &__magnifying-glass-icon {
+    @include block-item(.65rem, auto);
     color: $primary-dark-blue;
     cursor: pointer;
     margin-left: 0.5rem;
@@ -44,6 +65,9 @@
     &:active {
       color: $primary-button-blue;
       transform: scale(0.9);
+    }
+    @include tablet {
+      @include block-item(1rem, auto);
     }
   }
 
@@ -145,6 +169,7 @@
     border: 3px solid $neutral-white;
     position: relative;
     overflow: hidden;
+    line-height: 2.15rem;
 
     &::before {
       content: "";
@@ -169,9 +194,10 @@
   }
 
   &__clear-icon {
+    @include block-item(.6rem, auto);
     color: $primary-dark-blue;
     cursor: pointer;
-    margin-left: 0.5rem;
+    margin-left: 0.35rem;
     transition: transform 0.3s ease-in-out;
 
     &:hover {
@@ -182,6 +208,11 @@
     &:active {
       color: $primary-medium-blue;
       transform: scale(0.9);
+    }
+
+    @include tablet {
+      margin-left: 0.5rem;
+      @include block-item(1rem, auto);
     }
 }
 
@@ -226,7 +257,7 @@
 
     & input {
       flex-grow: 1;
-      padding: 0.5rem 1rem;
+      padding: 0.5rem .15rem;
       border: none;
       outline: none;
       background: transparent;
@@ -256,6 +287,10 @@
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3), 0 -10px 20px rgba(255, 255, 255, 0.8);
       border: 1px solid rgba(255, 255, 255, 0.5);
       transform: scale(1.1);
+    }
+
+    @include tablet {
+      padding: 0.5rem 1rem;
     }
   }
 
